фикс ссылок(вроде)

--- a/src/html/blocks/event-card.html
+++ b/src/html/blocks/event-card.html
@@ -1,5 +1,5 @@
 <article class="event-card @@class">
-  <a href="event.html" class="event-card__link">
+  <a href="dist/event.html" class="event-card__link">
     <picture class="event-card__picture">
       <source 
         media="(max-width: 649px)" 
