--- a/src/html/blocks/upcoming.html
+++ b/src/html/blocks/upcoming.html
@@ -125,7 +125,7 @@
         </footer>
       </div>
 
-      <a href="../events.html" class="upcoming__link link">Смотреть все</a>
+      <a href="dist/../events.html" class="upcoming__link link">Смотреть все</a>
     </div>
   </div>
 </section>
