--- a/src/html/event.html
+++ b/src/html/event.html
@@ -10,12 +10,12 @@
         <a href="/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="events.html" class="breadcrumbs__item-link link"
+        <a href="dist/events.html" class="breadcrumbs__item-link link"
           >Мероприятия</a
         >
       </li>
       <li class="breadcrumbs__item">
-        <a href="event.html" class="breadcrumbs__item-link link"
+        <a href="dist/event.html" class="breadcrumbs__item-link link"
           >Вечер | The Best of Sade</a
         >
       </li>
