--- a/src/html/events.html
+++ b/src/html/events.html
@@ -10,7 +10,7 @@
         <a href="/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="events.html" class="breadcrumbs__item-link link">Мероприятия</a>
+        <a href="dist/events.html" class="breadcrumbs__item-link link">Мероприятия</a>
       </li>
     </include>
 
