фикс ссылок(точно финал)

--- a/src/html/event.html
+++ b/src/html/event.html
@@ -7,7 +7,7 @@
 
     <include src="blocks/breadcrumbs.html" class="event__breadcrumbs">
       <li class="breadcrumbs__item">
-        <a href="/" class="breadcrumbs__item-link link">Главная</a>
+        <a href="dist/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
         <a href="dist/events.html" class="breadcrumbs__item-link link"
