--- a/src/html/default.html
+++ b/src/html/default.html
@@ -7,7 +7,7 @@
 
     <include src="blocks/breadcrumbs.html">
       <li class="breadcrumbs__item">
-        <a href="/" class="breadcrumbs__item-link link">Главная</a>
+        <a href="dist/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
         <a href="#" class="breadcrumbs__item-link link">Раздел</a>
