фикс ссылок(форсаж 9)

--- a/src/html/event.html
+++ b/src/html/event.html
@@ -7,15 +7,15 @@
 
     <include src="blocks/breadcrumbs.html" class="event__breadcrumbs">
       <li class="breadcrumbs__item">
-        <a href="dist/" class="breadcrumbs__item-link link">Главная</a>
+        <a href="/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="dist/events.html" class="breadcrumbs__item-link link"
+        <a href="events.html" class="breadcrumbs__item-link link"
           >Мероприятия</a
         >
       </li>
       <li class="breadcrumbs__item">
-        <a href="dist/event.html" class="breadcrumbs__item-link link"
+        <a href="event.html" class="breadcrumbs__item-link link"
           >Вечер | The Best of Sade</a
         >
       </li>
