--- a/src/html/events.html
+++ b/src/html/events.html
@@ -7,10 +7,10 @@
 
     <include src="blocks/breadcrumbs.html" class="events__breadcrumbs">
       <li class="breadcrumbs__item">
-        <a href="dist/" class="breadcrumbs__item-link link">Главная</a>
+        <a href="/" class="breadcrumbs__item-link link">Главная</a>
       </li>
       <li class="breadcrumbs__item">
-        <a href="dist/events.html" class="breadcrumbs__item-link link">Мероприятия</a>
+        <a href="events.html" class="breadcrumbs__item-link link">Мероприятия</a>
       </li>
     </include>
 
